--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.8
 colorama==0.4.6
 fastapi==0.115.12
 Flask==3.1.2
+greenlet==3.2.4
 h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
@@ -13,6 +14,8 @@ MarkupSafe==3.0.2
 pydantic==2.11.3
 pydantic_core==2.33.1
 sniffio==1.3.1
+SQLAlchemy==2.0.43
+sqlmodel==0.0.24
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
