--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 pydantic==2.11.3
 pydantic_core==2.33.1
+python-dotenv==1.2.1
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 sqlmodel==0.0.24
