--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.9.0
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+ecdsa==0.19.1
 fastapi==0.115.12
 Flask==3.1.2
 greenlet==3.2.4
@@ -10,10 +11,16 @@ h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jose==1.0.0
 MarkupSafe==3.0.2
+pyasn1==0.6.1
 pydantic==2.11.3
 pydantic_core==2.33.1
 python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 sqlmodel==0.0.24
