--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.9.0
 blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.1.8
 colorama==0.4.6
 ecdsa==0.19.1
@@ -19,6 +21,7 @@ pydantic_core==2.33.1
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.20
+requests==2.32.5
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -27,5 +30,6 @@ sqlmodel==0.0.24
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+urllib3==2.5.0
 uvicorn==0.34.2
 Werkzeug==3.1.3
